adjust view high scores

--- a/style.css
+++ b/style.css
@@ -3,4 +3,14 @@ header {
     display: flex;
     justify-content: space-around;
   }
+.title p {
+    width: 150px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 16px;
+    color: white;
+    background-color: #8a2be2;
+    border-radius: 10px;
+    cursor: pointer;
+  }
   
