--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ header {
     padding-top: 20px;
     display: flex;
     justify-content: space-around;
-  }
+}
 .title p {
     width: 150px;
     text-align: center;
@@ -12,5 +12,8 @@ header {
     background-color: #8a2be2;
     border-radius: 10px;
     cursor: pointer;
-  }
-  
+}
+.time p {
+    line-height: 50px;
+    font-size: 16px;
+}
