--- a/style.css
+++ b/style.css
@@ -56,3 +56,16 @@ main {
 #highscorepage {
   display: none;
 }
+
+.startbtn {
+    background-color: rgb(22, 42, 110);
+    margin: 10px;
+    width: 160px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.startbtn p {
+    line-height: 40px;
+    color: white;
+}
