--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ button {
 }
 
 #res {
-    background-color: #999;
+    background-color: #f8f6f6;
     width: 100%;
     margin: 10px 0;
     padding: 10px;
